[package]
name = "dragonbox_ecma"
version = "0.0.4"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "magic-akari <akari.ccino@gmail.com>",
]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point to string conversion conforming to ECMAScript specification"
documentation = "https://docs.rs/dragonbox_ecma"
edition = "2018"
exclude = ["performance.png", "chart/**"]
keywords = ["float"]
license = "Apache-2.0 WITH LLVM-exception OR BSL-1.0"
repository = "https://github.com/magic-akari/dragonbox"
rust-version = "1.52"

[dev-dependencies]
rand = "0.9"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
